update docs: #191
